--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+      <dependency>
+        <groupId>com.google.collections</groupId>
+        <artifactId>google-collections</artifactId>
+        <version>1.0</version>
+      </dependency>
 
     </dependencies>
 
