--- a/pom.xml
+++ b/pom.xml
@@ -102,11 +102,17 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
-      <dependency>
-        <groupId>com.google.collections</groupId>
-        <artifactId>google-collections</artifactId>
-        <version>1.0</version>
-      </dependency>
+        <dependency>
+            <groupId>com.google.collections</groupId>
+            <artifactId>google-collections</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.9</version>
+        </dependency>
 
     </dependencies>
 
@@ -122,6 +128,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
