--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/io.projectreactor/reactor-core -->
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+            <version>3.3.22.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -199,4 +206,4 @@
     </build>
 
 </project>
-<!-- TODO: Renew to Gradle project-->
+
